fixed Slime EndOfStream bug